apps/python/quotewake/salesforce/force-app/main/default/objects/Quote/fields/Attempt_Count__c.field-meta.xml
<CustomField>
    <fullName>Attempt_Count__c</fullName>
    <description>Number of outbound call attempts recorded by QuoteWake. Explicit demo simulations count as attempts; read-only dry runs and failures before a call or simulation result do not.</description>
    <defaultValue>0</defaultValue>
    <label>Attempt Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>