apps/python/quotewake/salesforce/force-app/main/default/objects/Quote/fields/Follow_Up_Status__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Status__c</fullName>
    <description>State of an active or finished QuoteWake follow-up. A blank value means the enabled quote is waiting for its first call.</description>
    <label>Follow Up Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Retry</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Stopped</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>