apps/python/quotewake/salesforce/force-app/main/default/objects/Quote/fields/Last_Follow_Up_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Follow_Up_At__c</fullName>
    <description>Date and time of the most recent QuoteWake provider call attempt or explicit demo simulation, including technical failures. Used as the per-Quote cooldown anchor.</description>
    <label>Last Follow Up At</label>
    <type>DateTime</type>
</CustomField>