apps/python/quotewake/salesforce/force-app/main/default/objects/Quote/fields/Last_Follow_Up_Result__c.field-meta.xml
<CustomField>
    <fullName>Last_Follow_Up_Result__c</fullName>
    <description>Result of the most recent QuoteWake call attempt or explicit demo simulation.</description>
    <label>Last Follow Up Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>No Answer</fullName><default>false</default><label>No Answer</label></value>
            <value><fullName>Busy</fullName><default>false</default><label>Busy</label></value>
            <value><fullName>Interested</fullName><default>false</default><label>Interested</label></value>
            <value><fullName>Not Interested</fullName><default>false</default><label>Not Interested</label></value>
            <value><fullName>Call Back Later</fullName><default>false</default><label>Call Back Later</label></value>
            <value><fullName>Invalid Number</fullName><default>false</default><label>Invalid Number</label></value>
            <value><fullName>Error</fullName><default>false</default><label>Error</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>