apps/python/quotewake/salesforce/force-app/main/default/objects/Quote/fields/Next_Follow_Up_At__c.field-meta.xml
<CustomField>
    <fullName>Next_Follow_Up_At__c</fullName>
    <description>Date and time when QuoteWake should retry a previous call attempt or demo simulation. Used only when Follow Up Status is Retry.</description>
    <label>Next Follow Up At</label>
    <type>DateTime</type>
</CustomField>