apps/python/quotewake/salesforce/force-app/main/default/objects/Quote/fields/QuoteWake_Enabled__c.field-meta.xml
<CustomField>
    <fullName>QuoteWake_Enabled__c</fullName>
    <description>Enables automated QuoteWake follow-up for this quote.</description>
    <defaultValue>false</defaultValue>
    <label>QuoteWake Enabled</label>
    <type>Checkbox</type>
</CustomField>